@@ -4,7 +4,6 @@
 added binary snr file for 50k,250k arrays (crlmm)
 fixed pmPosition for NGS tiling
 
-
 12-6-2008: BC
 read.celfiles was modified
 added: checkValidPhenodataForFiles, createPhenodataFromIds, createDefaultMiame, checkChipTypes
@@ -20,3 +19,7 @@ modifed read.celfiles to appear more like read.affybatch, should present a notic
 ** Added an rma method for Exon arrays.
 ** Changes previous rma method (originally for FeatureSet objs) to handle only ExpressionFeatureSet objects. The method is now in methods-ExpressionFeatureSet.R.
 ** RMA for Exon: we summarize to the probeset level. The output, an ExpressionSet, contains in its featureData slot annotation for further processing (to the exon/gene-level)
+
+03-9-2009: BC - committed version 1.7.23
+** Added support for Gene ST Arrays (structure very similar to Exon)
+** Added RMA for Gene ST arrays. The only difference from RMA/Exon is the SQL query that includes an INNER JOIN to account for multiplicity (1:N mapping from probe to probeset). This is implemented in methods-GeneFeatureSet.R
